Toolbar no longer get cropped on small screens

--- a/public/styles/layout.less
+++ b/public/styles/layout.less
@@ -35,10 +35,6 @@ body {
     display: block;
 }
 
-#top {
-    padding: 0;
-}
-
 #right {
     padding: 89px 5px 40px 0;
 
